# jeliza-svn

trunk/: .classpath  Benutzerhandbuch.doc  Benutzerhandbuch.txt  JEliza-online.txt  JEliza.java  JEliza.txt  JElizaAsk.java  JElizaCgi.java  JElizaConsole.java  JElizaFileReply.java  JElizaGui.java  JElizaHome.java  JElizaMega.java  JElizaSelfTalk.java  JElizaSelfTalkGui.java  JEliza_2.txt  JEliza_marcel.txt  Makefile  Makefile.am  Makefile.in  README  Test.java  adj.txt  catSyslog  compile  compile.sh  compileNative  config.status  configure.ac  console.sh  correctTextVdb  dellog.php  development-start.sh  ext-ques.jel  felix.php  felix.php~  foot.php  generate  genus.txt  getAnswer.sh  (+60 more)
trunk/chat/base/: ChatModuleMaster.java  JElizaICQ.java  JElizaIRC.java  Preferences.java
trunk/chat/modules/: BotModule.java  ChatLoopModule.java  JElizaModule.java
trunk/dic/: default.rul  index.html  rules.rul  std.wb  std.wb.save
trunk/gehirn/: alias.ghn  allgemein.ghn  base.ghn  fragen.ghn  stichwort.ghn
trunk/gehirn/kategorien/: allgemein.ghn  index.html  software.ghn
trunk/interpreter/base/: AnswerPack.java  Compiler.java  Interpreter.java
trunk/interpreter/io/: IteratorReader.java
trunk/interpreter/test/: TestInterpreter.java
trunk/jeliza-glade/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.in  jeliza-glade.glade  jeliza-glade.glade.bak  jeliza-glade.gladep
trunk/jeliza-glade/po/: ChangeLog  POTFILES.in
trunk/jeliza-glade/src/: MainWindow.cc  MainWindow.hh  MainWindow_glade.cc  MainWindow_glade.hh  Makefile.am  jeliza-glade.cc
trunk/jeliza/io/: FileOp.java
trunk/lib/linux_gtk2/: README
trunk/lib/win32/: README
trunk/megajeliza/chat/: jeliza.fra.brn  jeliza.sat.brn  megahal.aux  megahal.brn  megahal.swp
trunk/megajeliza/default/: jeliza.fra.brn  jeliza.sat.brn  megahal.ban  megahal.brn  megahal.trn
trunk/megajeliza/new/: jeliza.sat.brn  megahal.grt
trunk/module/megajeliza/: Saver.java  UltraJEliza.java  UltraModel.java
trunk/profiles/default/: db.properties  db.script
trunk/src/: test.cpp  tmp.c++
trunk/src/gtkgui/: jelizagtk.cpp
(+202 files in other folders)
