# generated 2007/3/10 15:04:37 CET by tobias@donald.(none)
# using glademm V2.6.0
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = jeliza-glade

jeliza_glade_SOURCES = \
	jeliza-glade.cc\
	MainWindow_glade.cc \
	MainWindow.cc 

noinst_HEADERS = \
	MainWindow_glade.hh \
	MainWindow.hh 

AM_CXXFLAGS = @GTKMM_CFLAGS@ 

jeliza_glade_LDADD = @LIBS@ @GTKMM_LIBS@ 
